--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Adoption Agency</title>
+    <title>Dog Adoption Agency change somthing</title>
 </head>
 <body>
     <h1>Find Your Furry Friend! change the header</h1>
